--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="Synclytic.jpg" alt="Synclytic Logo">
+        <img src="Synclytic.jpg" alt="Synclytic Logo" width="50%" height="50%">
     </header>
 
     <main>
