--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <center>
     <header>
         <img src="Synclytic.jpg" alt="Synclytic Logo" width="50%" height="50%">
     </header>
@@ -21,5 +22,6 @@
     <footer>
         <a href="privacypolicy.html">Privacy Policy</a> | <a href="mailto:ryanellenburg@gmail.com">Contact</a>
     </footer>
+    </center>
 </body>
 </html>
