--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -10,7 +10,7 @@
 
     <main>
         <h1>Privacy Policy</h1>
-        <p>Effective Date: [Insert Date]</p>
+        <p>Effective Date: October 19, 2024</p>
 
         <p>Your privacy is important to us. This Privacy Policy explains how Synclytic ("we", "our", or "us") handles your information when you use our app.</p>
     
