--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Synclytic</h1>
         <p>Sync your Outlook and Google Calendars seamlessly.</p>
         <!-- TODO create link when app is on app store -->
-        <a href="https://play.google.com/store/apps/details?id=your.app.id">Download from Google Play</a>
+                <a href="https://play.google.com/store/apps/details?id=your.app.id"><img src="googleplay.png" alt="Get it on Google Play" width="50%" height="50%"</a>
     </main>
 
     <footer>
