--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <center>
     <header>
-        <img src="Synclytic.jpg" alt="Synclytic Logo" width="40%" height="40%">
+        <img src="Synclytic.jpg" alt="Synclytic Logo" height="40%">
     </header>
 
     <main>
         <h1>Synclytic</h1>
         <p>Sync your Outlook and Google Calendars seamlessly.</p>
         <!-- TODO create link when app is on app store -->
-                <a href="https://play.google.com/store/apps/details?id=your.app.id"><img src="googleplay.png" alt="Get it on Google Play" width="50%" height="50%"</a>
+                <a href="https://play.google.com/store/apps/details?id=your.app.id"><img src="googleplay.png" alt="Get it on Google Play" height="50%"</a>
     </main>
 
     <footer>
