--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
 
     <main>
         <h1>Synclytic</h1>
-        <p>Sync your Outlook and Google Calendars seamlessly.</p>
-        <!-- TODO create link when app is on app store -->
-                <a href="https://play.google.com/store/apps/details?id=your.app.id"><img src="googleplay.png" alt="Get it on Google Play" height="10%" width="10%"</a>
+        <p>You know you want it.</p>
     </main>
 
     <footer>
-        <a href="privacypolicy.html">Privacy Policy</a> | <a href="mailto:ryanellenburg@gmail.com">Contact</a>
+        <a href="privacypolicy.html">Privacy Policy</a> | <a href="mailto:byte_me@synclytic.org">Contact</a>
     </footer>
     </center>
 </body>
